tests/closure/closure.exp
Error: Closure.js:20
 20: takes_string(global_x); // error
                  ^^^^^^^^ number. This type is incompatible with the expected param type of
  6: function takes_string(_:string) { }
                             ^^^^^^ string

Error: Closure.js:38
 38:   takes_string(local_x); // error
                    ^^^^^^^ number. This type is incompatible with the expected param type of
  6: function takes_string(_:string) { }
                             ^^^^^^ string

Error: Closure.js:57
 57: takes_string(global_y); // error
                  ^^^^^^^^ number. This type is incompatible with the expected param type of
  6: function takes_string(_:string) { }
                             ^^^^^^ string

Error: Closure.js:77
 77:   takes_string(local_y); // error
                    ^^^^^^^ number. This type is incompatible with the expected param type of
  6: function takes_string(_:string) { }
                             ^^^^^^ string

Error: cond_havoc.js:12
 12:   return x; // error, string ~/~> number (return type anno) TODO
              ^ string. This type is incompatible with the expected return type of
  6: function example(b: bool): number {
                                ^^^^^^ number

Error: const.js:20
 20:     call_me = () => { var y:number = var_x; };  // error
                                          ^^^^^ Cannot assign `var_x` to `y` because null [1] is incompatible with number [2].
  References:
   22:   var_x = null;
                 ^^^^ [1]: null
   20:     call_me = () => { var y:number = var_x; };  // error
                                   ^^^^^^ [2]: number

Error: const.js:20
 20:     call_me = () => { var y:number = var_x; };  // error
                                          ^^^^^ Cannot assign `var_x` to `y` because null or undefined [1] is incompatible with number [2].
  References:
    9: function g(x: ?number) {
                     ^^^^^^^ [1]: null or undefined
   20:     call_me = () => { var y:number = var_x; };  // error
                                   ^^^^^^ [2]: number


Found 7 errors
